--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+ssl/
+!**/src/main/**/ssl/
+!**/src/test/**/ssl/
+./ssl
+/ssl/
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
